# haskell-multiply

./: .gitignore  .gitlab-ci.yml  .stylish-haskell.yaml  Makefile  Multiply.html  README.md  Setup.hs  benchmark.html  doc-index.html  doc-index.json  index.html  multiply.cabal  multiply.haddock  multiply.txt  stack.yaml
.github/workflows/: haskell.yml
all/: doc-index-36.html  doc-index-All.html  doc-index-D.html  doc-index-H.html  doc-index-L.html  doc-index-M.html  doc-index-O.html  doc-index-P.html  index.html
app/: Main.hs  MultiplyApp.hs
bench/: MultiplyBench.hs
multiply-0.1.0/: LICENSE  Multiply.html  doc-index.html  doc-index.json  index.html  multiply.haddock  multiply.txt
multiply-0.1.0/src/: Multiply.html
src/: Multiply.hs  Multiply.html
test/: MultiplySpec.hs  TestSpec.hs  TestsSpec.hs
