cabal-version: 1.12

name:               multiply
version:            0.1.0
description:        Please see the README on GitLab at <https://github.com/frankhjung/haskell-multiply#readme>
homepage:           https://github.com/frankhjung/haskell-multiply#readme
bug-reports:        https://github.com/frankhjung/haskell-multiply/issues
author:             Frank H Jung
maintainer:         frankhjung@linux.com
copyright:          Copyright © 2021 Frank H Jung
license:            BSD3
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository   head
  type:             git
  location:         https://github.com/frankhjung/haskell-multiply

library
  exposed-modules:  Multiply
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base

executable          multiplyApp
  main-is:          MultiplyApp.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  other-modules:    Paths_multiply
  build-depends:    base
                  , multiply

test-suite          test
  hs-source-dirs:   test
  main-is:          TestsSpec.hs
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hspec
                  , QuickCheck
                  , multiply
  build-tool-depends:
                    hspec-discover:hspec-discover
  other-modules:    MultiplySpec

benchmark           multiplyBench
  main-is:          MultiplyBench.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , criterion
                  , multiply
